--- a/custom_components/volkswagencarnet/translations/en.json
+++ b/custom_components/volkswagencarnet/translations/en.json
@@ -13,7 +13,8 @@
           "spin": "S-PIN",
           "scandinavian_miles": "Enable if you want to change from km to mil on sensors",
           "name": "Name your car (defaults to VIN number)",
-          "debug": "Enable full debug logs from API (requires debug logging enabled in config)"
+          "debug": "Enable full debug logs from API (requires debug logging enabled in config)",
+          "convert": "Select if you wan to make any unit conversions"
         }
       },
       "select_vehicle": {
@@ -63,7 +64,8 @@
           "scan_interval": "Sensors update interval (minutes)",
           "region": "Region (The country where the car was sold)",
           "debug": "Enable full debug logs from API (requires debug logging enabled in config)",
-          "scandinavian_miles": "Enable if you want to change from km to mil on sensors"
+          "scandinavian_miles": "Enable if you want to change from km to mil on sensors",
+          "convert": "Select if you wan to make any unit conversions"
         }
       }
     }
