--- a/custom_components/volkswagencarnet/translations/en.json
+++ b/custom_components/volkswagencarnet/translations/en.json
@@ -14,7 +14,7 @@
           "scandinavian_miles": "Enable if you want to change from km to mil on sensors",
           "name": "Name your car (defaults to VIN number)",
           "debug": "Enable full debug logs from API (requires debug logging enabled in config)",
-          "convert": "Select if you wan to make any unit conversions"
+          "convert": "Select if you wan to make any distance unit conversions"
         }
       },
       "select_vehicle": {
@@ -65,7 +65,7 @@
           "region": "Region (The country where the car was sold)",
           "debug": "Enable full debug logs from API (requires debug logging enabled in config)",
           "scandinavian_miles": "Enable if you want to change from km to mil on sensors",
-          "convert": "Select if you wan to make any unit conversions"
+          "convert": "Select if you wan to make any distance unit conversions"
         }
       }
     }
