--- a/custom_components/volkswagencarnet/translations/nn.json
+++ b/custom_components/volkswagencarnet/translations/nn.json
@@ -1,15 +1,73 @@
 {
-    "title": "Volkswagen WeConnect",
+    "title": "Volkswagen We Connect",
     "config": {
         "step": {
-            "user": {
-                "title": "WeConnect-konfigurasjon",
-                "description": "Fyll ut WeConnect-informasjon",
-                "data": {
-                    "username": "Brukarnamn",
-                    "password": "Passord"
-                }
+        "user": {
+            "title": "We Connect konfigurasjon",
+            "description": "Fyll inn We Connect informasjon\n\nS-PIN er påkrevd for nokon valg som for eksempel låsing/opplåsing og start/stopp av motorvarmar",
+            "data": {
+            "username": "Epost",
+            "password": "Passord",
+            "mutable": "Ta vekk krysset for å gjere bilen 'read only'. Behald krysset om du vil gjere endringar mot bilen",
+            "region": "Landskode der bilen blei solgt (ISO 3155-1 / Aplha-2)",
+            "spin": "S-PIN",
+            "scandinavian_miles": "Aktiver om du vil endre frå km til mil på sensorar",
+            "name": "Gje bilen ditt eit navn (ellers blir navnet det same som VIN nummeret)",
+            "debug": "Skru på debug logger frå API (krev at debug logging er skrudd på i konfigurasjonen",
+            "convert": "Velg denne viss du vil ha omrekning av distanse"
+            }
+        },
+        "select_vehicle": {
+            "title": "Køyretøy",
+            "description": "Desse køyretøya blei funne. Velg køyretøyet du ønskjer å overvåke",
+            "data": {
+            "vehicle": "VIN Nummer"
+            }
+        },
+        "select_instruments": {
+            "title": "Instrument",
+            "description": "Velg instrument du ønskjer å overvåke",
+            "data": {
+            "resources": "Ressurser som skal overvåkast"
+            }
+        },
+        "reauth_confirm": {
+            "data": {
+            "description": "Autentiser deg på nytt med WeConnect-kontoen din. Pass på at du godtar einkvar ny EULA i WeConnect-portalen (https://www.portal.volkswagen-we.com/) før du går vidare.",
+            "username": "Epost",
+            "password": "Passord"
             }
         }
+        },
+        "abort": {
+        "already_configured": "Ein bil med dette VIN-nummeret er allerede konfigurert",
+        "reauth_successful": "Re-autentisering var vellykka"
+        },
+        "error": {
+        "cannot_connect": "Klarte ikkje å logge inn på Volkswagen We Connect, sjekk legitimasjon og verifiser at tenesta fungerer",
+        "cannot_update": "Klarte ikkje å hente oppdatering frå Volkswagen We Connect",
+        "unknown": "[%key:common::config_flow::error::unknown%]"
+        },
+        "progress": {
+        "task_login": "Logger inn på We Connect",
+        "task_update": "Henter køyretøy"
+        }
+    },
+    "options": {
+        "step": {
+        "user": {
+            "title": "Val for We Connect",
+            "description": "Konfigurer oppdateringsintervall",
+            "data": {
+            "report_request": "Aktiver automatisk rapportforespurnad",
+            "report_scan_interval": "Oppdateringsintervall for rapportforespurnad (dagar)",
+            "scan_interval": "Oppdateringsintervall for sensorar (minutt)",
+            "region": "Region (landet der bilen blei solgt)",
+            "debug": "Skru på debug logger frå API (krev at debug logging er skrudd på i konfigurasjonen",
+            "scandinavian_miles": "Aktiver om du vil endre frå km til mil på sensorar",
+            "convert": "Velg denne viss du vil ha omrekning av distanse"
+            }
+        }
+      }
     }
-}
+  }
