--- a/custom_components/volkswagencarnet/translations/en.json
+++ b/custom_components/volkswagencarnet/translations/en.json
@@ -9,11 +9,11 @@
           "username": "Email",
           "password": "Password",
           "mutable": "Uncheck to make the car 'read only'. Keep checked to interact with the car",
-          "region": "Region (The country where the car was sold)",
+          "region": "Country code where the car was sold (ISO 3155-1 / Alpha-2)",
           "spin": "S-PIN",
           "name": "Name your car (defaults to VIN number)",
           "debug": "Enable full debug logs from API (requires debug logging enabled in config)",
-          "convert": "Select if you wan to make any distance unit conversions"
+          "convert": "Select if you want to make any distance unit conversions"
         }
       },
       "select_vehicle": {
