--- a/custom_components/volkswagencarnet/translations/da.json
+++ b/custom_components/volkswagencarnet/translations/da.json
@@ -9,7 +9,7 @@
           "username": "Email",
           "password": "Adgangskode",
           "mutable": "Fjern afkrydsning for at gøre integrationen til 'read only'. Behold for at kunne interagere med bilen",
-          "region": "Landekode for hvor bilen blev solgt (ISO 3155-1 / Alpha-2)",
+          "region": "Landekode for hvor bilen blev solgt (ISO 3166-1 alpha-2)",
           "spin": "S-PIN",
           "name": "Navngiv din bil (standard er bilens stelnummer)",
           "debug": "Tillad fuld fejlfindingslog fra API (kræver at fejlfindingslogføring er slået til)",
