--- a/custom_components/volkswagencarnet/translations/en.json
+++ b/custom_components/volkswagencarnet/translations/en.json
@@ -9,7 +9,7 @@
           "username": "Email",
           "password": "Password",
           "mutable": "Uncheck to make the car 'read only'. Keep checked to interact with the car",
-          "region": "Country code where the car was sold (ISO 3155-1 / Alpha-2)",
+          "region": "Country code where the car was sold (ISO 3166-1 alpha-2)",
           "spin": "S-PIN",
           "name": "Name your car (defaults to VIN number)",
           "debug": "Enable full debug logs from API (requires debug logging enabled in config)",
