--- a/custom_components/volkswagencarnet/translations/fi.json
+++ b/custom_components/volkswagencarnet/translations/fi.json
@@ -9,7 +9,7 @@
           "username": "Sähköposti",
           "password": "Salasana",
           "mutable": "Salli komentojen lähettäminen ajoneuvolle",
-          "region": "Maa jossa ajoneuvo myytiin (ISO 3155-1 / Alpha-2)",
+          "region": "Maa jossa ajoneuvo myytiin (ISO 3166-1 alpha-2)",
           "spin": "S-PIN",
           "name": "Nimeä ajoneuvo (oletuksena näytetään VIN)",
           "debug": "Ota täysi API:n debuglogitus käyttöön (logitustaso pitää myös olla asetettu debugille)",
@@ -59,7 +59,7 @@
         "description": "Aseta päivitysväli",
         "data": {
           "scan_interval": "Anturidatan päivitysväli (minuuteissa)",
-          "region": "Maa jossa ajoneuvo myytiin (ISO 3155-1 / Alpha-2)",
+          "region": "Maa jossa ajoneuvo myytiin (ISO 3166-1 alpha-2)",
           "debug": "Ota täysi API:n debuglogitus käyttöön (debug-taso pitää olla asetettu)",
           "convert": "Käytä etäisyysmuunnoksia"
         }
