--- a/custom_components/volkswagencarnet/translations/ru.json
+++ b/custom_components/volkswagencarnet/translations/ru.json
@@ -9,7 +9,7 @@
           "username": "Email",
           "password": "Password",
           "mutable": "Снятие отметки сделает автомобиль 'только для чтения'. Оставьте отмеченным для взаимодействия с автомобилем",
-          "region": "Код страны где был продан автомобиль (ISO 3155-1 / Alpha-2)",
+          "region": "Код страны где был продан автомобиль (ISO 3166-1 alpha-2)",
           "spin": "S-PIN",
           "name": "Имя вашего автомобиля (по умолчанию VIN номер)",
           "debug": "Включить полное журналирование отладки API (требует включённого отладочного логирования в файле настроек)",
