--- a/custom_components/volkswagencarnet/translations/sl.json
+++ b/custom_components/volkswagencarnet/translations/sl.json
@@ -9,7 +9,7 @@
           "username": "E-pošta",
           "password": "Geslo",
           "mutable": "Odkljukajte, da naredite avto 'samo za branje'. Označite, če želite komunicirati z avtom",
-          "region": "Koda države, kjer je bil avto prodan (ISO 3155-1 / Alfa-2)",
+          "region": "Koda države, kjer je bil avto prodan (ISO 3166-1 alpha-2)",
           "spin": "S-PIN",
           "name": "Poimenujte svoj avto (privzeto je številka VIN)",
           "debug": "Omogoči celotne dnevnike odpravljanja težav iz API (zahteva omogočeno beleženje odpravljanja težav v konfiguraciji)",
