--- a/custom_components/volkswagencarnet/translations/nl.json
+++ b/custom_components/volkswagencarnet/translations/nl.json
@@ -13,7 +13,8 @@
           "spin": "S-PIN",
           "name": "Geef je auto een naam (standaard het VIN-nummer)",
           "debug": "Schakel volledige debug-logs van de API in (vereist dat debug-logging is ingeschakeld in de config)",
-          "convert": "Selecteer of je eenheden voor afstand wilt converteren"
+          "convert": "Selecteer of je eenheden voor afstand wilt converteren",
+          "scan_interval": "Update-interval sensoren (minuten)"
         }
       },
       "select_vehicle": {
