--- a/custom_components/volkswagencarnet/translations/ru.json
+++ b/custom_components/volkswagencarnet/translations/ru.json
@@ -13,7 +13,8 @@
           "spin": "S-PIN",
           "name": "Имя вашего автомобиля (по умолчанию VIN номер)",
           "debug": "Включить полное журналирование отладки API (требует включённого отладочного логирования в файле настроек)",
-          "convert": "Отметьте если вы хотите сделать какие-либо преобразования единиц измерения или расстояний"
+          "convert": "Отметьте если вы хотите сделать какие-либо преобразования единиц измерения или расстояний",
+          "scan_interval": "Интервал обновления значений (минуты)"
         }
       },
       "select_vehicle": {
