--- a/custom_components/volkswagencarnet/translations/sl.json
+++ b/custom_components/volkswagencarnet/translations/sl.json
@@ -13,7 +13,8 @@
           "spin": "S-PIN",
           "name": "Poimenujte svoj avto (privzeto je številka VIN)",
           "debug": "Omogoči celotne dnevnike odpravljanja težav iz API (zahteva omogočeno beleženje odpravljanja težav v konfiguraciji)",
-          "convert": "Izberite, če želite izvesti pretvorbo enot razdalje"
+          "convert": "Izberite, če želite izvesti pretvorbo enot razdalje",
+          "scan_interval": "Interval posodobitve senzorjev (minute)"
         }
       },
       "select_vehicle": {
